--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
-spring.datasource.user=root
-spring.datasource.password=1234
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
-
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.show_sql=true
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.properties.jakarta.persistence.validation.mode=none
+
 
 price=100
