--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://localhost:3306/cinema
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -9,5 +9,5 @@ spring.jpa.hibernate.show_sql=true
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.properties.jakarta.persistence.validation.mode=none
 
-
+server.port=8085
 price=100
