--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/cinema
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+
 
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.properties.jakarta.persistence.validation.mode=none
